# veccs

./: .gitignore  .pre-commit-config.yaml  README.md  cmp.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: pre-commit.yml  pytest.yml
docs/: index.md
src/_src/: maxmin.cpp  maxmin_ancestor.cpp  maxmin_var.cpp
src/veccs/: __init__.py  orderings.py  orderings2.py  utils.py
src/veccs/legacy/: __init__.py  _faiss.py  _sklearn.py
tests/: test_legacy.py  test_orderings.py  test_orderings2.py
